--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyberdoom-1-//-agent",
+  "name": "cyberdoom.rf.gd-agentic",
   "private": true,
   "version": "0.0.0",
   "type": "module",
